--- a/PAGES/8f_TS-highOrderFunctions/index.html
+++ b/PAGES/8f_TS-highOrderFunctions/index.html
@@ -2644,7 +2644,7 @@ end</code></pre> </div></div>
       <div class="col-lg- mx-auto">
         <h2>Forcing Specialization</h2></p>
 <p>Explicitly calling the function to circumvent the no-specialization issue isn&#39;t optimal, since it introduces an unnecessary computation. Fortunately, alternative solutions exist to address the problem. One approach is to type-annotate <code>f</code>, which provides Julia with a hint to specialize. Another solution is to wrap the function in a tuple and then call it. This ensures the identification of the function&#39;s type, as tuples identify a concrete type for each element. </p>
-<p>Below, we outline both approaches</p>
+<p>Below, we outline both approaches.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
