--- a/PAGES/9a_objectsAllocating/index.html
+++ b/PAGES/9a_objectsAllocating/index.html
@@ -2558,7 +2558,11 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Interpreting Memory Allocation</h2></p>
-<p>Recall that memory allocations can occur on either the heap or the stack, with <strong>Julia exclusively referring to memory allocations as those on the heap</strong>. These are the ones to watch out for, as they can significantly slow down computations. In the following, we present several objects avoiding the heap for their storage. Afterwards, we&#39;ll introduce objects that do allocate on the heap.</p>
+<p>In <a href="/julia_book/PAGES/7c_TS-onTypes/">a previous section</a>, we introduced the fundamentals of memory allocations, highlighting that objects can be stored on either the heap or the stack. </p>
+<p>Throughout this whole chapter, we&#39;ll adhere to the conventional terminology used in programming and Julia, where <strong>allocations exclusively refer to those on the heap</strong>. This definition also implies that an object is said to &quot;allocate&quot; when it&#39;s stored on the heap.</p>
+<p>The distinction isn&#39;t merely a matter of convenience to economize on words. Rather, it emerges naturally since heap allocations are the ones that matter when it comes to performance: they involve a more complex memory management, which can significantly hinder performance.</p>
+<p>Indeed, the close relationship between performance and heap allocations can be seen through the macros <code>@time</code> and <code>@btime</code>. To provide a comprehensive measure of performance, they not only return the total runtime of an operation, but additionally the heap allocations involved. These macros also follow the conventional terminology, and simply refer to them as allocations.</p>
+<p>In the following, we initiate our analysis of memory allocation by categorizing objects into two groups: those that allocate and those that don&#39;t.</p>
 <p>      </div>
     </div>
   </div>
@@ -2568,18 +2572,18 @@ color: white;
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Numbers, Tuples, Named Tuples, and Ranges Don't Allocate</h2></p>
-<p>Objects that don&#39;t allocate memory include:</p>
+<p>We start by focusing on objects that don&#39;t allocate memory on the heap. These include:</p>
 <ul>
-<li><p>numbers</p>
+<li><p>Numbers</p>
 </li>
-<li><p>tuples </p>
+<li><p>Tuples </p>
 </li>
-<li><p>named tuples</p>
+<li><p>Named Tuples</p>
 </li>
-<li><p>ranges </p>
+<li><p>Ranges </p>
 </li>
 </ul>
-<p>This property determines that creating, accessing, and operating on these objects don&#39;t allocate either. This is demonstrated below.</p>
+<p>As these objects don&#39;t allocate, neither does creating, accessing, and operating on them. This is demonstrated below.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2621,6 +2625,9 @@ end</code></pre> </div></div>
 </code></pre> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
+ <div style="visibility: hidden;margin-bottom:-4em">
+this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible this is invisible
+</div>
 <p>      </div>
     </div>
   </div>
@@ -2630,10 +2637,10 @@ end</code></pre> </div></div>
     <div class="row">
       <div class="col-lg- mx-auto">
         <h2>Arrays and Slices Do Allocate Memory</h2></p>
-<p>Array creation allocates memory, even if the result is not stored. For instance, executing the following function allocates memory.</p>
+<p>The most common object that allocates memory is arrays. These allocations occur not only when we create an array and assign it to a variable, but also when computations returning arrays are performed on the fly. The following example illustrates this point. </p>
  <div class=" code_box"> <details  open><summary> Vector Creation  </summary> <div class="code_inline"><div class="code_NoFormat"><pre><code class="language-julia">foo&#40;&#41;  &#61; &#91;1,2,3&#93;</code></pre> </div> </div> <div class="output_in_modal"><div class="sign_output">Output in REPL </div>  <div class="mixed_output_inline"><div class="mixed_output_NoFormat"><div class="julia_line">julia&gt</div> <code>@btime foo&#40;&#41;</code> <br/> <pre><code class="plaintext code-output">  13.714 ns (1 allocation: 80 bytes)
 </code></pre> </div></div> </div>   </details></div>
-<p>Another common operation that allocates memory is slicing, as it creates a copy of an array by default. The only case where no memory allocation occurs is when we access a single element of an array.</p>
+<p><a href="/julia_book/PAGES/5d_slices/">Slicing</a> is another operation that creates an array, and therefore allocates. This is due to the default behavior of slicing, which returns a new copy rather than a view of the original object.  The sole exception to this rule is when a single element is accessed, in which case no new allocation occurs.</p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
@@ -2660,7 +2667,7 @@ foo&#40;x&#41; &#61; x&#91;1&#93; * x&#91;2&#93; &#43; x&#91;3&#93;</code></pre>
 </code></pre> </div></div> </div> 
  </div></div>
 <p>  </p></details></div>
-<p>Array creation occurs not only through slicing, but also with array comprehensions and broadcasting operations. In the case of broadcasting, this takes place even when the output vector is temporary, as demonstrated in the tab &quot;Broadcasting 2&quot;.</p>
+<p>Other operations that involve array creation include array comprehensions and broadcasting. Remarkably, broadcasting even involves memory allocation when intermediate results are computed internally, but not explicitly returned. This specific case is demonstrated in &quot;Broadcasting 2&quot; below. </p>
  <div class=" hide_tab"> <details  open><summary  >  </summary>  <p></p>
  <div class="tab_wrapper">
  <div class="tab_code_links">
