--- a/PAGES/3d_vectorizing/index.html
+++ b/PAGES/3d_vectorizing/index.html
@@ -2592,7 +2592,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="introduction" class="scrollspy section-bg-color">
+<section id="introduction" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2610,7 +2610,7 @@ color: white;
     </div>
   </div>
 </section>
-<section id="the_map_function" class="scrollspy">
+<section id="the_map_function" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2721,7 +2721,7 @@ z &#61; map&#40;&#43;, x, y&#41;        # recall that &#96;&#43;&#96; is both an
     </div>
   </div>
 </section>
-<section id="broadcasting" class="scrollspy section-bg-color">
+<section id="broadcasting" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2733,7 +2733,7 @@ z &#61; map&#40;&#43;, x, y&#41;        # recall that &#96;&#43;&#96; is both an
     </div>
   </div>
 </section>
-<section id="broadcasting_functions" class="scrollspy">
+<section id="broadcasting_functions" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2829,7 +2829,7 @@ region        &#61;  &#91;&quot;Europe&quot;, &quot;North America&quot;&#93;</co
     </div>
   </div>
 </section>
-<section id="broadcasting_operators" class="scrollspy section-bg-color">
+<section id="broadcasting_operators" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2864,7 +2864,7 @@ y &#61; &#91;-1, -2, -3&#93;</code></pre>
     </div>
   </div>
 </section>
-<section id="broadcasting_operators_with_single-element_objects" class="scrollspy">
+<section id="broadcasting_operators_with_single-element_objects" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2910,7 +2910,7 @@ region        &#61;  &#91;&quot;Europe&quot;, &quot;North America&quot;&#93;</co
     </div>
   </div>
 </section>
-<section id="iterable_objects" class="scrollspy section-bg-color">
+<section id="iterable_objects" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2993,7 +2993,7 @@ z    &#61; temp .^ 2</code></pre>
     </div>
   </div>
 </section>
-<section id="broadcasting_functions_vs_broadcasting_operators" class="scrollspy">
+<section id="broadcasting_functions_vs_broadcasting_operators" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3032,7 +3032,7 @@ vector_squared&#40;x&#41; &#61; x .^ 2         # function for a vector &#39;x&#3
     </div>
   </div>
 </section>
-<section id="broadcasting_over_one_argument_only" class="scrollspy section-bg-color">
+<section id="broadcasting_over_one_argument_only" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3134,7 +3134,7 @@ list &#61; &#91;1, 2, 3&#93;</code></pre>
     </div>
   </div>
 </section>
-<section id="currying_and_fixing_arguments_optional" class="scrollspy">
+<section id="currying_and_fixing_arguments_optional" class="scrollspy section-bg-color">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -3274,7 +3274,7 @@ list &#61; &#91;1, 2, 3&#93;</code></pre>
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified October 2, 2024 
+          © Martin Alfaro <br>Last Modified October 4, 2024 
       </span> 
   </div> 
 </footer>
