--- a/PAGES/6_overview/index.html
+++ b/PAGES/6_overview/index.html
@@ -2592,7 +2592,7 @@ color: white;
 {{end}} -->
 
 <div class="franklin-content">
-<section id="13633231208144796923" class="scrollspy section-bg-color">
+<section id="13633231208144796923" class="scrollspy">
   <div class="container">
     <div class="row">
       <div class="col-lg- mx-auto">
@@ -2634,7 +2634,7 @@ this is invisible this is invisible this is invisible this is invisible this is 
           </a>
       </span> 
       <span class="center-text"> 
-          © Martin Alfaro <br>Last Modified October 2, 2024 
+          © Martin Alfaro <br>Last Modified October 4, 2024 
       </span> 
   </div> 
 </footer>
