--- a/PAGES/11b_multithread_intro/index.html
+++ b/PAGES/11b_multithread_intro/index.html
@@ -2907,38 +2907,38 @@ B &#61; @task job_B&#40;1&#41;      # B&#39;s task takes 1 second
 
 schedule&#40;A&#41; |&gt; wait
 schedule&#40;B&#41; |&gt; wait</code></pre> </div></div> 
-<p><div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
-            <img src=" /assets/PAGES/11b_multithread_intro/pics/02a.gif " class="gif-wrapper" alt="gif" style="width:;">
+<div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
+            <img src="/julia_book/assets/PAGES/11b_multithread_intro/pics/02a.gif" class="gif-wrapper" alt="gif" style="width:;">
             <div class="play-overlay">
               <button class="play-button">
                 <img src="/julia_book/assets/icons/play_button.png" alt="Play">
               </button>        
             </div>            
-          </div> </div> /assets/PAGES/11b_multithread_intro/pics/02a.gif&#125;</p>
+          </div> </div> 
  </div><div data-id="" class="tabcontent">
 <div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">A &#61; @task job_A&#40;2&#41;      # A&#39;s task takes 2 seconds
 B &#61; @task job_B&#40;1&#41;      # B&#39;s task takes 1 second
 
 &#40;schedule&#40;A&#41;, schedule&#40;B&#41;&#41; .|&gt; wait</code></pre> </div></div> 
-<p><div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
-            <img src=" /assets/PAGES/11b_multithread_intro/pics/02b.gif " class="gif-wrapper" alt="gif" style="width:;">
+<div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
+            <img src="/julia_book/assets/PAGES/11b_multithread_intro/pics/02b.gif" class="gif-wrapper" alt="gif" style="width:;">
             <div class="play-overlay">
               <button class="play-button">
                 <img src="/julia_book/assets/icons/play_button.png" alt="Play">
               </button>        
             </div>            
-          </div> </div> /assets/PAGES/11b_multithread_intro/pics/02b.gif&#125;</p>
+          </div> </div> 
  </div><div data-id="" class="tabcontent">
 <div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">A &#61; job_A&#40;2&#41;            # A&#39;s task takes 2 seconds
 B &#61; job_B&#40;1&#41;            # B&#39;s task takes 1 second</code></pre> </div></div> 
-<p><div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
-            <img src=" /assets/PAGES/11b_multithread_intro/pics/02a.gif " class="gif-wrapper" alt="gif" style="width:;">
+<div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
+            <img src="/julia_book/assets/PAGES/11b_multithread_intro/pics/02a.gif" class="gif-wrapper" alt="gif" style="width:;">
             <div class="play-overlay">
               <button class="play-button">
                 <img src="/julia_book/assets/icons/play_button.png" alt="Play">
               </button>        
             </div>            
-          </div> </div> /assets/PAGES/11b_multithread_intro/pics/02a.gif&#125;</p>
+          </div> </div> 
  </div></div>
 <p>  </p></details></div>
 <p>Note that <code>wait</code> was added even for the concurrent case, although after both tasks are scheduled. The intention is that both tasks must be processed at the same time, without implying that any subsequent operation is also processed concurrently.</p>
@@ -2975,14 +2975,14 @@ end</code></pre> </div></div>
     schedule&#40;A&#41; |&gt; wait
     schedule&#40;B&#41; |&gt; wait
 end</code></pre> </div></div> 
-<p><div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
-            <img src=" /assets/PAGES/11b_multithread_intro/pics/04a.gif " class="gif-wrapper" alt="gif" style="width:;">
+<div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
+            <img src="/julia_book/assets/PAGES/11b_multithread_intro/pics/04a.gif" class="gif-wrapper" alt="gif" style="width:;">
             <div class="play-overlay">
               <button class="play-button">
                 <img src="/julia_book/assets/icons/play_button.png" alt="Play">
               </button>        
             </div>            
-          </div> </div> /assets/PAGES/11b_multithread_intro/pics/04a.gif&#125;</p>
+          </div> </div> 
  </div><div data-id="" class="tabcontent">
 <div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">function schedule_of_tasks&#40;&#41;
     A &#61; @task job&#40;&quot;A&quot;, 2&#41;      # A&#39;s task takes 2 seconds
@@ -2990,14 +2990,14 @@ end</code></pre> </div></div>
 
     &#40;schedule&#40;A&#41;, schedule&#40;B&#41;&#41; .|&gt; wait
 end</code></pre> </div></div> 
-<p><div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
-            <img src=" /assets/PAGES/11b_multithread_intro/pics/04b.gif " class="gif-wrapper" alt="gif" style="width:;">
+<div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
+            <img src="/julia_book/assets/PAGES/11b_multithread_intro/pics/04b.gif" class="gif-wrapper" alt="gif" style="width:;">
             <div class="play-overlay">
               <button class="play-button">
                 <img src="/julia_book/assets/icons/play_button.png" alt="Play">
               </button>        
             </div>            
-          </div> </div> /assets/PAGES/11b_multithread_intro/pics/04b.gif&#125;</p>
+          </div> </div> 
  </div></div>
 <p>  </p></details></div>
 <p>Nonetheless, the key insight from the examples isn&#39;t the ineffectiveness of concurrency in a session with a single thread. Instead, the main takeaway is the  underlying procedure outlined: <strong>when a task is scheduled, the computer will attempt to find an available thread for its computation</strong>. For concurrency, this implies that <strong>starting a session with multiple threads will result in parallel code execution</strong>, which is simply referred to as <span style="color: rgb(62, 121, 180);"><strong>multithreading</strong></span>. In the following, we explain this case in more detail</p>
@@ -3024,14 +3024,14 @@ end</code></pre> </div></div>
     schedule&#40;A&#41; |&gt; wait
     schedule&#40;B&#41; |&gt; wait
 end</code></pre> </div></div> 
-<p><div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
-            <img src=" /assets/PAGES/11b_multithread_intro/pics/204b.gif " class="gif-wrapper" alt="gif" style="width:;">
+<div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
+            <img src="/julia_book/assets/PAGES/11b_multithread_intro/pics/204b.gif" class="gif-wrapper" alt="gif" style="width:;">
             <div class="play-overlay">
               <button class="play-button">
                 <img src="/julia_book/assets/icons/play_button.png" alt="Play">
               </button>        
             </div>            
-          </div> </div> /assets/PAGES/11b_multithread_intro/pics/204b.gif&#125;</p>
+          </div> </div> 
  </div><div data-id="" class="tabcontent">
 <div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">function schedule_of_tasks&#40;&#41;
     A &#61; @task job&#40;&quot;A&quot;, 2&#41; ; A.sticky &#61; false      # A&#39;s task takes 2 seconds
@@ -3039,14 +3039,14 @@ end</code></pre> </div></div>
 
     &#40;schedule&#40;A&#41;, schedule&#40;B&#41;&#41; .|&gt; wait
 end</code></pre> </div></div> 
-<p><div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
-            <img src=" /assets/PAGES/11b_multithread_intro/pics/204a.gif " class="gif-wrapper" alt="gif" style="width:;">
+<div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
+            <img src="/julia_book/assets/PAGES/11b_multithread_intro/pics/204a.gif" class="gif-wrapper" alt="gif" style="width:;">
             <div class="play-overlay">
               <button class="play-button">
                 <img src="/julia_book/assets/icons/play_button.png" alt="Play">
               </button>        
             </div>            
-          </div> </div> /assets/PAGES/11b_multithread_intro/pics/204a.gif&#125;</p>
+          </div> </div> 
  </div></div>
 <p>  </p></details></div>
 <p>Once that there&#39;s more than one thread available, concurrency implies simultaneity. This means that each task is run on a different thread, explaining why task B finishes first. </p>
@@ -3061,14 +3061,14 @@ end</code></pre> </div></div>
     A &#61; job&#40;&quot;A&quot;, 2&#41;             # A&#39;s task takes 2 seconds
     B &#61; job&#40;&quot;B&quot;, 1&#41;             # B&#39;s task takes 1 second
 end</code></pre> </div></div> 
-<p><div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
-            <img src=" /assets/PAGES/11b_multithread_intro/pics/204b.gif " class="gif-wrapper" alt="gif" style="width:;">
+<div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
+            <img src="/julia_book/assets/PAGES/11b_multithread_intro/pics/204b.gif" class="gif-wrapper" alt="gif" style="width:;">
             <div class="play-overlay">
               <button class="play-button">
                 <img src="/julia_book/assets/icons/play_button.png" alt="Play">
               </button>        
             </div>            
-          </div> </div> /assets/PAGES/11b_multithread_intro/pics/204b.gif&#125;</p>
+          </div> </div> 
  </div><div data-id="" class="tabcontent">
 <div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">function schedule_of_tasks&#40;&#41;
     A &#61; @spawn job&#40;&quot;A&quot;, 2&#41;      # A&#39;s task takes 2 seconds
@@ -3076,14 +3076,14 @@ end</code></pre> </div></div>
 
     &#40;A,B&#41; .|&gt; wait
 end</code></pre> </div></div> 
-<p><div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
-            <img src=" /assets/PAGES/11b_multithread_intro/pics/204a.gif " class="gif-wrapper" alt="gif" style="width:;">
+<div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
+            <img src="/julia_book/assets/PAGES/11b_multithread_intro/pics/204a.gif" class="gif-wrapper" alt="gif" style="width:;">
             <div class="play-overlay">
               <button class="play-button">
                 <img src="/julia_book/assets/icons/play_button.png" alt="Play">
               </button>        
             </div>            
-          </div> </div> /assets/PAGES/11b_multithread_intro/pics/204a.gif&#125;</p>
+          </div> </div> 
  </div></div>
 <p>  </p></details></div>
 <p>      </div>
@@ -3124,14 +3124,14 @@ end
 
 output &#61; foo&#40;&#41;
 println&#40;&quot;the value stored in &#96;output&#96; is &#36;&#40;output&#41;&quot;&#41;</code></pre> </div></div> 
-<p><div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
-            <img src=" /assets/PAGES/11b_multithread_intro/pics/03a.gif " class="gif-wrapper" alt="gif" style="width:;">
+<div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
+            <img src="/julia_book/assets/PAGES/11b_multithread_intro/pics/03a.gif" class="gif-wrapper" alt="gif" style="width:;">
             <div class="play-overlay">
               <button class="play-button">
                 <img src="/julia_book/assets/icons/play_button.png" alt="Play">
               </button>        
             </div>            
-          </div> </div> /assets/PAGES/11b_multithread_intro/pics/03a.gif&#125;</p>
+          </div> </div> 
  </div></div>
 <p>  </p></details></div>
 <p>Consider now the implementation at a lower level through tasks. In particular, a task performing a mutation is defined in the following way.</p>
@@ -3169,14 +3169,14 @@ end
 
 output &#61; foo&#40;&#41;
 println&#40;&quot;the value stored in &#96;output&#96; is &#36;&#40;output&#41;&quot;&#41;</code></pre> </div></div> 
-<p><div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
-            <img src=" /assets/PAGES/11b_multithread_intro/pics/03b.gif " class="gif-wrapper" alt="gif" style="width:;">
+<div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
+            <img src="/julia_book/assets/PAGES/11b_multithread_intro/pics/03b.gif" class="gif-wrapper" alt="gif" style="width:;">
             <div class="play-overlay">
               <button class="play-button">
                 <img src="/julia_book/assets/icons/play_button.png" alt="Play">
               </button>        
             </div>            
-          </div> </div> /assets/PAGES/11b_multithread_intro/pics/03b.gif&#125;</p>
+          </div> </div> 
  </div><div data-id="" class="tabcontent">
 <div class="code_in_modal"><div class="code_NoFormat"><pre><code class="language-julia">function foo&#40;&#41;
     x &#61; &#91;0, 0, 0&#93;
@@ -3188,14 +3188,14 @@ end
 
 output &#61; foo&#40;&#41;
 println&#40;&quot;the value stored in &#96;output&#96; is &#36;&#40;output&#41;&quot;&#41;</code></pre> </div></div> 
-<p><div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
-            <img src=" /assets/PAGES/11b_multithread_intro/pics/03c.gif " class="gif-wrapper" alt="gif" style="width:;">
+<div class="gif_output_in_modal output_in_modal"><div class="sign_output">Output in REPL </div>   <div class="gif_output"> 
+            <img src="/julia_book/assets/PAGES/11b_multithread_intro/pics/03c.gif" class="gif-wrapper" alt="gif" style="width:;">
             <div class="play-overlay">
               <button class="play-button">
                 <img src="/julia_book/assets/icons/play_button.png" alt="Play">
               </button>        
             </div>            
-          </div> </div> /assets/PAGES/11b_multithread_intro/pics/03c.gif&#125;</p>
+          </div> </div> 
  </div></div>
 <p>  </p></details></div>
 <p>As we can see, without waiting for the mutation to take place, the subsequent operation takes the value of <code>x</code> at the moment of execution. Since the mutation hasn&#39;t started, <code>x</code> is still <code>x &#61; &#91;0,0,0&#93;</code>.</p>
